// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionPrimitive matches forest theme snapshot 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "gap": 12,
    }
  }
>
  <View
    accessibilityLabel="CUENTA"
    accessible={true}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "column",
          "gap": 4,
        }
      }
    >
      <Text
        allowFontScaling={true}
        maxFontSizeMultiplier={1.5}
        style={
          {
            "color": "#567A5E",
            "fontFamily": "Inter_600SemiBold",
            "fontSize": 11,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textTransform": "uppercase",
          }
        }
        suppressHighlighting={true}
      >
        CUENTA
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "backgroundColor": "#E0E8E1",
        "flexDirection": "column",
        "height": 1,
      }
    }
  />
</View>
`;

exports[`SectionPrimitive matches midnight theme snapshot 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "gap": 12,
    }
  }
>
  <View
    accessibilityLabel="CUENTA"
    accessible={true}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "column",
          "gap": 4,
        }
      }
    >
      <Text
        allowFontScaling={true}
        maxFontSizeMultiplier={1.5}
        style={
          {
            "color": "#A1A1AA",
            "fontFamily": "Inter_600SemiBold",
            "fontSize": 11,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textTransform": "uppercase",
          }
        }
        suppressHighlighting={true}
      >
        CUENTA
      </Text>
    </View>
  </View>
</View>
`;

exports[`SectionPrimitive matches sunrise theme snapshot 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "gap": 12,
    }
  }
>
  <View
    accessibilityLabel="Goals"
    accessible={true}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "column",
          "gap": 4,
        }
      }
    >
      <Text
        allowFontScaling={true}
        maxFontSizeMultiplier={1.5}
        style={
          {
            "color": "#271F15",
            "fontFamily": "Inter, Helvetica, Arial, sans-serif",
            "fontSize": 17,
            "fontWeight": "bold",
            "letterSpacing": -0.2,
            "lineHeight": 22,
          }
        }
        suppressHighlighting={true}
      >
        Goals
      </Text>
      <Text
        allowFontScaling={true}
        maxFontSizeMultiplier={1.5}
        style={
          {
            "color": "#786E5D",
            "fontFamily": "Inter_400Regular",
            "fontSize": 13,
            "letterSpacing": 0,
            "lineHeight": 20,
          }
        }
        suppressHighlighting={true}
      >
        Track your progress
      </Text>
    </View>
  </View>
</View>
`;
